# unie-lab5-airflow-orchestration-with-kafka

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Containerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
src/: consumer_dag.py  producer_dag.py
tests/: test_consumer_dag.py  test_producer_dag.py
