[project]
name = "unie-lab5-airflow-orchestration-with-kafka"
version = "0.1.0"
description = "Airflow lab with Kafka integration"
requires-python = ">=3.9"
dependencies = [
    "apache-airflow==3.0.6",
    "apache-airflow-providers-apache-kafka>=1.5.0",
    "apache-airflow-providers-common-compat>=1.3.0"
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "detect-secrets>=1.5.0",
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PT"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"] # ignore assert statements
